--- a/css/index.css
+++ b/css/index.css
@@ -109,9 +109,9 @@ body {
   justify-content: space-between;
   align-items: center;
   gap: 3.75rem; /* mellemrum mellem nav tasterne*/
-  margin-right: 7.5rem;
   margin-bottom: 37rem;
   position: relative;
+  padding-right: 7rem;
 }
 
 /* Styling af menupunkter */
@@ -320,7 +320,7 @@ body {
   flex-direction: column; /* Laver en lodret stak af h2 og p */
   align-items: start; /* Justerer elementerne til venstre */
   margin-left: 1rem;
-  margin-right: 5rem;
+  padding-right: 5rem;
   padding: 2rem;
   margin-top: 2rem;
 }
@@ -360,17 +360,7 @@ body {
     margin-bottom: 2.6rem;
     margin-left: -5.5rem;
   }
-
-  h5 {
-    font-size: 1rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    margin-left: -14rem;
-    margin-top: -2rem;
-    padding-left: 7rem;
-    padding-right: 7rem;
-  }
-  
+ 
   .logo img {
     width: 8.75rem;
     margin-left: 3rem;
@@ -442,7 +432,7 @@ body {
 
   .main-nav ul {
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.8rem;
     margin-bottom: 15rem;
     margin-left: 3rem;
   }
@@ -450,7 +440,7 @@ body {
   .main-nav ul li a {
     text-decoration: none;
     color: var(--beige);
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: "Poppins", serif;
     font-weight: 550;
     font-style: normal;
@@ -537,18 +527,35 @@ body {
   .plakat3{
     display: none;
   }
-
-  h2 {
-    margin-top: 9rem;
+  .logo img {
+    margin-left:3rem;
   }
+  h2 {
+    margin-top: 2rem;
+  
+  }
+  .plakattekst{
+    padding-bottom:5rem;
+  }
+ .main-nav ul {
 
+    gap: 1.5rem;
+   padding:2rem;
+   
+  }
+  
+  .main-nav ul li a {
+  font-size:1.6rem;
+    font-weight:700;
+  }
+  
 }
 
 /* Media for mindre telefoner */
 @media (max-width: 440px) {
 
   h1 {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 
   h2 {
@@ -586,7 +593,7 @@ body {
     flex-direction: column;
     gap: 1rem;
     margin-bottom: 15rem;
-    margin-left: 2rem;
+    padding-right: 2rem;
   }
 
   .main-nav ul li a {
@@ -608,18 +615,18 @@ body {
 
   #plakat1 {
     height:auto;
-    width: 13;
+    width: 15rem;
     margin-left: 1rem;
     margin-right: 1rem;
   }
 
   #plakat5 {
-    height: 25.4rem;
+    height: 21rem;
     width: 2rem;
   }
 
   #plakat6 {
-    height: 25.4rem;
+    height: 21rem;
     width: 2rem;
   }
 
